--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
    "main": "index.js",
    "type": "module",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
       "build": "tsc"
    },
    "keywords": [],
@@ -14,9 +14,9 @@
    "devDependencies": {
       "@types/express": "^4.17.17",
       "@types/node": "^20.1.5",
+      "concurrently": "^8.0.1",
+      "nodemon": "^2.0.22",
+      "ts-node": "^10.9.1",
       "typescript": "^5.0.4"
-   },
-   "dependencies": {
-      "nodemon": "^2.0.22"
    }
 }
