--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,17 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/express": "^4.17.17",
       "@types/node": "^20.1.5",
       "concurrently": "^8.0.1",
       "nodemon": "^2.0.22",
       "ts-node": "^10.9.1",
       "typescript": "^5.0.4"
+   },
+   "dependencies": {
+      "bcrypt": "^5.1.0",
+      "dotenv": "^16.0.3",
+      "mongoose": "^7.2.0"
    }
 }
